@@ -1,1 +1,2 @@
 DIST linkedin-0.4.6.gem 32256 SHA256 13d1da1f67c11421bb0451006f9fbd963b7f46cdb2ccf63babbdc959e276625f SHA512 b3d227db036c785bc4396afa4f7be83d23b463ef7341154e0fcf24549c37cb09f29b0e943d106b03e581d49b9211d1002233bab71d025da930b6fae7a567259a WHIRLPOOL 8d07779f0c9220a6ee6b077f1694a797a5d927af1322e290704d2d3851be98a21b14587d15444ba6e534db8f5a2818203b844f4f60776611afdf0ba0d47e922d
+DIST linkedin-0.4.7.gem 35840 SHA256 21f808d6d69fff5593c23bc74bace0000f3e990314b27dfcac29d57b7a9cdb38 SHA512 51a6ec191083158b3b09d6a851f1359e391fc8c7b5a0eb549943584953647f5c585dc6b279e0b8175788e57022a2ffac342b01c41a00e4af5a5daa1e34c1794d WHIRLPOOL 9979cd9e02498f0ec1f1a08825578e38a08bb33bd2e575f9b427c1570108468038bdef5d2f0ec21bb289dc7c687c48a9dacb938371a0b93b9bb4dacaa33bf4a8
