@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*linkedin-0.4.7 (17 Apr 2014)
+
+  17 Apr 2014; Hans de Graaff <graaff@gentoo.org> +linkedin-0.4.7.ebuild:
+  Version bump.
+
 *linkedin-0.4.6 (25 Mar 2014)
 
   25 Mar 2014; Hans de Graaff <graaff@gentoo.org> +linkedin-0.4.6.ebuild,
